@@ -377,8 +377,6 @@ public class FifoScheduler implements ResourceScheduler, Configurable {
         }
       }
       
-      application.setHeadroom(clusterResource);
-      
       LOG.debug("post-assignContainers");
       application.showRequests();
 
@@ -387,6 +385,12 @@ public class FifoScheduler implements ResourceScheduler, Configurable {
               node.getAvailableResource(), minimumAllocation)) {
         return;
       }
+    }
+
+    // Update the applications' headroom to correctly take into
+    // account the containers assigned in this update.
+    for (SchedulerApp application : applications.values()) {
+      application.setHeadroom(Resources.subtract(clusterResource, usedResource));
     }
   }
 
